--- a/blog-app-chart/templates/serviceaccount.yaml
+++ b/blog-app-chart/templates/serviceaccount.yaml
@@ -1,13 +1,11 @@
-{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "blog-app-chart.serviceAccountName" . }}
   labels:
     {{- include "blog-app-chart.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
+{{- if .Values.serviceAccount.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
+    {{- toYaml .Values.serviceAccount.annotations | nindent 4 }}
 {{- end }}
+
