--- a/blog-app-chart/values.yaml
+++ b/blog-app-chart/values.yaml
@@ -20,3 +20,10 @@ tolerations: []
 
 affinity: {}
 
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: true
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name: ""
+
