--- a/blog-app-chart/templates/service.yaml
+++ b/blog-app-chart/templates/service.yaml
@@ -5,11 +5,11 @@ metadata:
   labels:
     {{- include "blog-app-chart.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
   selector:
-    {{- include "blog-app-chart.selectorLabels" . | nindent 4 }}
+    app: {{ include "blog-app-chart.name" . }}
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
+  type: LoadBalancer
+
