--- a/blog-app-chart/values.yaml
+++ b/blog-app-chart/values.yaml
@@ -10,27 +10,33 @@ service:
   port: 80
   targetPort: 5000
 
-ingress:
-  enabled: false
+livenessProbe:
+  httpGet:
+    path: /
+    port: 5000
+  initialDelaySeconds: 30
+  timeoutSeconds: 5
+
+readinessProbe:
+  httpGet:
+    path: /
+    port: 5000
+  initialDelaySeconds: 30
+  timeoutSeconds: 5
 
 resources: {}
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
-
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
 
 autoscaling:
   enabled: false
   minReplicas: 1
   maxReplicas: 10
   targetCPUUtilizationPercentage: 80
+
+podSecurityContext: {}
+securityContext: {}
+
+imagePullSecrets: []
+nodeSelector: {}
+affinity: {}
+tolerations: []
 
