--- a/blog-app-chart/values.yaml
+++ b/blog-app-chart/values.yaml
@@ -10,6 +10,11 @@ service:
   port: 80
   targetPort: 5000
 
+serviceAccount:
+  create: true
+  name: ""
+
+
 livenessProbe:
   httpGet:
     path: /
