--- a/blog-app-chart/values.yaml
+++ b/blog-app-chart/values.yaml
@@ -14,6 +14,12 @@ serviceAccount:
   create: true
   name: ""
 
+ingress:
+  enabled: false
+  annotations: {}
+  hosts:
+    - host: chart-example.local
+      paths: []    
 
 livenessProbe:
   httpGet:
